--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "classnames": "^2.2.6",
     "codecov": "^3.6.5",
     "gatsby": "^2.20.12",
+    "gatsby-cli": "^2.12.101",
     "gatsby-link": "^2.3.2",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-feed": "^2.4.1",
@@ -79,7 +80,8 @@
     "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
