--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.4",
     "invariant": "^2.2.4",
+    "joi": "^17.3.0",
     "katex": "^0.11.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
